# tt-thrml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: tt-thrml-internals.md
examples/: _tt_demo_common.py  _tt_upstream_example_common.py  tt_all_of_thrml_demo.py  tt_categorical_ebm_demo.py  tt_gaussian_chain_demo.py  tt_ising_chain_demo.py  tt_mixed_discrete_ebm_demo.py  tt_probabilistic_computing_demo.py  tt_run_existing_program.py  tt_spin_models_sampling_demo.py
reproducers/: ttlang_categorical_recurrent_hang.py  ttlang_coupled_recurrent_hang.py  ttlang_simultaneous_carry_hang.py
scripts/: demo.py  probe_gather_pipeline.py  run_demo_on_wormhole.sh  run_ttlang_categorical_spin_plan.py  run_ttlang_discrete_sweep.py  run_ttlang_spin_categorical_plan.py  run_wormhole_smoke_perf_in_tt_docker.sh  run_wormhole_smoke_perf_in_upstream_ttmlir_ird.sh  test_ising.py
tests/: conftest.py  test_api.py  test_backend_executor.py  test_categorical_ops.py  test_compiler_lowering.py  test_device_open.py  test_dispatch_counts.py  test_executor_api.py  test_family_handlers.py  test_mesh_executor.py  test_package_surface.py  test_program_compiler.py  test_program_executor.py  test_readme.py  test_runtime_bridge.py  test_runtime_config.py  test_state_runtime.py  test_ttlang_backend.py  test_ttmlir_backend.py  test_ttmlir_categorical_theta.py  test_ttmlir_gaussian_canonical.py  test_ttmlir_runtime.py  test_ttmlir_spin_gamma.py  test_ttnn_kernels.py  test_wormhole_smoke_perf.py  ttnn_test_utils.py
tt_thrml/: __init__.py  api.py  compiler.py  core.py  executor.py  (+10 more)
(+33 files in other folders)
