[project]
name = "tt-thrml"
version = "0.1.3"
description = "Tenstorrent runtime and TT-MLIR execution layer for THRML"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Specter Labs"},
]
urls = { upstream = "https://github.com/extropic-ai/thrml" }

dependencies = [
    "thrml>=0.1.3",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
testing = [
    "coverage==7.3.2",
    "pytest==7.2.0",
]
examples = [
    "networkx>=3",
    "dwave-networkx>=0.8",
]
development = [
    "black==25.1.0",
    "isort==5.12.0",
    "pyright==1.1.399",
    "mypy==1.5.1",
    "pytest-cov==4.0.0",
    "pytest-asyncio==0.21.0",
    "black[jupyter]==25.1.0"
]

[tool.setuptools]
packages = { find = { include = ["tt_thrml", "tt_thrml.*"] } }

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
include = ["tt_thrml", "tests"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
